Bug 21855 - Mouse pointer update when scrolling and hovering over a link
Summary: Mouse pointer update when scrolling and hovering over a link
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR minor
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 59683 76989 (view as bug list)
Depends on:
Blocks:
 
Reported: 2001-03-07 22:48 UTC by Unknown
Modified: 2006-12-29 21:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nalexander 2001-03-07 22:40:18 UTC
(*** This bug was imported into bugs.kde.org ***)

Package:           konqueror
Version:           KDE 2.1.0 
Severity:          normal
Installed from:    Debian Package 4:2.1.0-1 (testing/unstable)
Compiler:          gcc version 2.95.3 20010219 (prerelease)
OS:                Linux 2.4.1 i686
OS/Compiler notes: 

Minor cosmetic bug (present in every browser I've ever used).

To reproduce:

Hover over a link.

Scroll down using the keyboard hotkeys.

Finger pointer remains even when not over a link.

Very inconsequential but incorrect.

(Submitted via bugs.kde.org)
(Called from KBugReport dialog. Fields E-Mail manually changed)
Comment 1 Jim Dabell 2002-11-14 15:23:02 UTC
Still present in 3.1rc3. 
Comment 2 Icekiss 2003-11-15 14:32:16 UTC
Still present in CVS HEAD from 5.11.03
Comment 3 Stephan Kulow 2004-05-17 21:17:41 UTC
Replaced nalexander@amavi.com with null@kde.org due to bounces by reporter
Comment 4 Jim Dabell 2004-05-26 17:14:23 UTC
Still present in 3.2.2.
Comment 5 Maksim Orlovich 2004-05-30 02:02:23 UTC
*** Bug 59683 has been marked as a duplicate of this bug. ***
Comment 6 Maksim Orlovich 2004-05-30 02:21:20 UTC
*** Bug 76989 has been marked as a duplicate of this bug. ***
Comment 7 William Kendrick 2005-06-05 09:56:24 UTC
Still present in 3.4.0.
Comment 8 Christian González 2005-11-23 21:06:37 UTC
and in 3.5.0-rc1...
Comment 9 Stefan Monov 2005-12-27 23:33:27 UTC
Still present in 3.5.0.
Comment 10 Christian González 2006-01-02 15:32:49 UTC
Hm. This could be easily fixed, couldn't it? There is no bug when using the mouse wheel, so the pointer gets updated after a mouse wheel scroll.
It should be easy to implement the same update after a keyboard scroll.
Or am I wrong?
-  eh, does anybody read this, btw...? ;-)
Comment 11 Ian Ventura-Whiting 2006-08-29 14:22:55 UTC
When using the wheel mouse, the mouse point does indeed turn back to a normal pointer. However, if you then use the wheel to move to another link the pointer does not change back into a hand. This is on KDE 3.5.3 (using SuSE packages) and on KDE 3.5.4 (compiled from source).
Comment 12 Stefan Monov 2006-08-29 14:30:49 UTC
Re: Comment #11
I confirm for KDE 3.5.1 and 3.5.4 (both from SUSE packages).
Comment 13 Rishi 2006-09-07 17:49:24 UTC
Hi,

This is still present here in KDE 3.4.2 on the FreeBSD 4.11 platform.

It is really annoying; please work on it.

Thank you!
Comment 14 Martin Koller 2006-12-29 21:15:09 UTC
SVN commit 617643 by mkoller:

BUG: 21855

whenever the content changes, recheck if the mouse cursor shall show
some other shape (pointing hand, etc.) to correctly match it to
the content below it


 M  +4 -4      khtmlview.cpp  


--- branches/KDE/3.5/kdelibs/khtml/khtmlview.cpp #617642:617643
@@ -758,6 +758,10 @@
     khtml::DrawContentsEvent event( p, ex, ey, ew, eh );
     QApplication::sendEvent( m_part, &event );
 
+    QMouseEvent *tempEvent = new QMouseEvent( QEvent::MouseMove, viewport()->mapFromGlobal( QCursor::pos() ), Qt::NoButton, Qt::NoButton );
+    viewportMouseMoveEvent( tempEvent );
+    delete tempEvent;
+
     d->painting = false;
 }
 
@@ -3220,10 +3224,6 @@
     {
         d->scrollBarMoved = true;
         QScrollView::viewportWheelEvent( e );
-
-        QMouseEvent *tempEvent = new QMouseEvent( QEvent::MouseMove, QPoint(-1,-1), QPoint(-1,-1), Qt::NoButton, e->state() );
-        emit viewportMouseMoveEvent ( tempEvent );
-        delete tempEvent;
     }
 
 }