BUG: 21855

whenever the content changes, recheck if the mouse cursor shall show
some other shape (pointing hand, etc.) to correctly match it to
the content below it

svn path=/branches/KDE/3.5/kdelibs/; revision=617643